# Knowledge-base-RAG

./: .env  .gitattributes  README.md  pyproject.toml
api/: app.py  auth.py  db.py  generation.py  pyproject.toml  retrival.py  settings.py
api/routes/: auth.py  forward.py  history.py  stats.py
api/schemas/: forward.py  history.py  stats.py
api/services/: history_service.py  rag_service.py  stats_service.py
data/chromadb/a318e59b-9fed-4fe1-971b-1538c0886234/: index_metadata.pickle
data/dataset/.obsidian/: workspace.json
data/dataset/accelerator/: torch.accelerator.current_device_idx.md  torch.accelerator.current_device_index.md  torch.accelerator.current_stream.md  torch.accelerator.device_count.md  torch.accelerator.device_index.md  torch.accelerator.is_available.md  torch.accelerator.set_device_idx.md  torch.accelerator.set_device_index.md  torch.accelerator.set_stream.md  torch.accelerator.synchronize.md
data/dataset/amp/: amp_examples.md  torch.nn.functional.binary_cross_entropy.md  torch.nn.functional.binary_cross_entropy_with_logits.md
data/dataset/autograd/: autograd.md  multiprocessing.md  torch.autograd.Function.backward.md  torch.autograd.Function.forward.md  torch.autograd.Function.jvp.md  torch.autograd.Function.vmap.md  torch.autograd.backward.md  torch.autograd.forward_ad.UnpackedDualTensor.md  (+43 more)
notebooks/: BaseLine.ipynb
notebooks/eda/: EDA_QA.ipynb  EDA_QA_2.ipynb  EDA_TORCH.ipynb
tgbot/: __main__.py  pyproject.toml  settings.py
torch-parser/: README.md  pyproject.toml
torch-parser/src/: __main__.py  parser.py  settings.py
(+1875 files in other folders)
