[project]
name = "torch-parser"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/torch_parser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

